--- a/index.html
+++ b/index.html
@@ -3,123 +3,178 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>미래지향적 로또 분석기</title>
+    <title>Lotto-Analyzer</title>
     <style>
         body {
-            background: linear-gradient(135deg, #1e1e2f 0%, #2a4066 100%);
+            background: linear-gradient(135deg, #0d0d1b 0%, #1f2a44 100%);
             color: #ffffff;
             font-family: 'Poppins', sans-serif;
             margin: 0;
-            padding: 0;
+            padding: 20px;
             min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
             overflow-x: hidden;
         }
+
+        /* 컨테이너 스타일 */
+        .container {
+            background: rgba(20, 20, 40, 0.8);
+            backdrop-filter: blur(20px);
+            border-radius: 25px;
+            padding: 40px;
+            width: 90%;
+            max-width: 1000px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            animation: fadeInUp 1s ease-out;
+        }
+
+        /* 타이틀 스타일 */
         h1 {
-            font-size: 2.8em;
-            font-weight: 700;
-            background: linear-gradient(90deg, #00ddeb, #ff007a);
+            font-size: 3em;
+            font-weight: 800;
+            background: linear-gradient(90deg, #00f7ff, #ff00cc);
             -webkit-background-clip: text;
             color: transparent;
             text-align: center;
-            margin-bottom: 20px;
-            animation: slideIn 1s ease-out;
+            margin-bottom: 30px;
+            letter-spacing: 2px;
+            animation: glow 2s infinite alternate;
         }
-        .container {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(15px);
-            border-radius: 20px;
-            padding: 30px;
-            width: 90%;
-            max-width: 900px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            animation: fadeInUp 1s ease-out;
+
+        /* 버튼 스타일 */
+        .button-group {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 30px;
         }
         button {
-            background: linear-gradient(45deg, #00ddeb, #ff007a);
+            background: linear-gradient(45deg, #00f7ff, #ff00cc);
             border: none;
-            padding: 12px 25px;
-            margin: 10px;
+            padding: 15px 30px;
             border-radius: 50px;
             color: #fff;
-            font-size: 1em;
+            font-size: 1.1em;
             font-weight: 600;
             cursor: pointer;
+            position: relative;
+            overflow: hidden;
             transition: transform 0.3s, box-shadow 0.3s;
         }
-        button:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(255, 0, 122, 0.5);
+        button::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            background: rgba(255, 255, 255, 0.3);
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+            transition: width 0.6s ease, height 0.6s ease;
         }
+        button:hover::before {
+            width: 300px;
+            height: 300px;
+        }
+        button:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 20px rgba(255, 0, 204, 0.6);
+        }
+
+        /* 로또 데이터 리스트 */
         #lottoList {
             margin-top: 20px;
-            max-height: 500px;
+            max-height: 600px;
             overflow-y: auto;
-            padding: 10px;
-            border-radius: 10px;
-            background: rgba(255, 255, 255, 0.03);
+            padding: 15px;
+            border-radius: 15px;
+            background: rgba(255, 255, 255, 0.05);
         }
         .lotto-entry {
-            padding: 15px;
-            margin: 5px 0;
-            background: rgba(255, 255, 255, 0.08);
-            border-radius: 10px;
-            font-size: 1em;
-            transition: transform 0.2s;
+            padding: 20px;
+            margin: 10px 0;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.05));
+            border-radius: 15px;
+            font-size: 1.1em;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s, box-shadow 0.3s;
             animation: slideInLeft 0.5s ease-out;
         }
         .lotto-entry:hover {
-            transform: scale(1.02);
-            background: rgba(255, 255, 255, 0.15);
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(0, 255, 204, 0.2);
         }
+
+        /* 스크롤바 스타일 */
         #lottoList::-webkit-scrollbar {
-            width: 8px;
+            width: 10px;
         }
         #lottoList::-webkit-scrollbar-thumb {
-            background: #ff007a;
+            background: linear-gradient(#00f7ff, #ff00cc);
             border-radius: 10px;
         }
         #lottoList::-webkit-scrollbar-track {
             background: rgba(255, 255, 255, 0.1);
         }
+
+        /* 애니메이션 정의 */
         @keyframes fadeInUp {
             from { opacity: 0; transform: translateY(50px); }
             to { opacity: 1; transform: translateY(0); }
         }
-        @keyframes slideIn {
-            from { opacity: 0; transform: translateX(-100px); }
-            to { opacity: 1; transform: translateX(0); }
-        }
         @keyframes slideInLeft {
-            from { opacity: 0; transform: translateX(-20px); }
+            from { opacity: 0; transform: translateX(-30px); }
             to { opacity: 1; transform: translateX(0); }
         }
+        @keyframes glow {
+            from { text-shadow: 0 0 10px #00f7ff, 0 0 20px #ff00cc; }
+            to { text-shadow: 0 0 20px #00f7ff, 0 0 30px #ff00cc; }
+        }
+
+        /* 반응형 디자인 */
         @media (max-width: 600px) {
-            h1 { font-size: 2em; }
+            h1 { font-size: 2.2em; }
             .container { padding: 20px; }
-            button { padding: 10px 20px; font-size: 0.9em; }
+            button { padding: 12px 20px; font-size: 1em; }
+            .lotto-entry { font-size: 0.9em; padding: 15px; }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>미래지향적 로또 분석기</h1>
-        <button onclick="fetchAllLottoData()">모든 회차 가져오기</button>
-        <button onclick="updateLatestLotto()">최신 회차 업데이트</button>
+        <h1>Lotto-Analyzer</h1>
+        <div class="button-group">
+            <button onclick="fetchAllLottoData()">모든 회차 가져오기</button>
+            <button onclick="updateLatestLotto()">최신 회차 업데이트</button>
+        </div>
         <div id="lottoList"></div>
     </div>
 
     <script>
-        // 로컬 스토리지에서 데이터 관리
-        let lottoData = JSON.parse(localStorage.getItem('lottoData')) || [];
+        // 로컬 스토리지에서 데이터 로드 (안전하게 배열 보장)
+        let lottoData;
+        try {
+            const storedData = localStorage.getItem('lottoData');
+            lottoData = storedData ? JSON.parse(storedData) : [];
+            if (!Array.isArray(lottoData)) throw new Error('lottoData is not an array');
+        } catch (error) {
+            console.error('로컬 스토리지 데이터 로드 실패:', error);
+            lottoData = [];
+            localStorage.setItem('lottoData', JSON.stringify(lottoData));
+        }
 
         // 데이터 표시 함수
         function displayLottoData() {
             const lottoList = document.getElementById('lottoList');
             lottoList.innerHTML = '';
+            if (!Array.isArray(lottoData) || lottoData.length === 0) {
+                lottoList.textContent = '아직 로또 데이터가 없습니다.';
+                return;
+            }
             lottoData.forEach(entry => {
                 const div = document.createElement('div');
                 div.className = 'lotto-entry';
@@ -128,7 +183,7 @@
             });
         }
 
-        // API 호출 함수 (CORS 우회용 프록시 적용)
+        // API 호출 함수
         async function fetchLottoData(drwNo) {
             const url = `https://cors-anywhere.herokuapp.com/https://www.dhlottery.co.kr/common.do?method=getLottoNumber&drwNo=${drwNo}`;
             try {
@@ -151,13 +206,13 @@
             }
         }
 
-        // 모든 회차 가져오기 (중복 방지)
+        // 모든 회차 가져오기
         async function fetchAllLottoData() {
-            const latestDrwNo = 1100; // 임시 값, 동적으로 가져오려면 추가 로직 필요
-            const existingDrwNos = new Set(lottoData.map(d => d.drwNo)); // 기존 회차 번호 집합
+            const latestDrwNo = 1100; // 동적 확인 필요 시 수정
+            const existingDrwNos = new Set(lottoData.map(d => d.drwNo));
 
             for (let i = 1; i <= latestDrwNo; i++) {
-                if (!existingDrwNos.has(i)) { // 중복되지 않은 회차만 가져오기
+                if (!existingDrwNos.has(i)) {
                     const data = await fetchLottoData(i);
                     if (data) {
                         lottoData.push(data);
@@ -165,17 +220,16 @@
                         console.log(`${i}회차 가져오기 완료`);
                     }
                 }
-                await new Promise(resolve => setTimeout(resolve, 1000)); // 대기 시간 증가
+                await new Promise(resolve => setTimeout(resolve, 1000));
             }
 
-            // 회차순으로 정렬
             lottoData.sort((a, b) => a.drwNo - b.drwNo);
             localStorage.setItem('lottoData', JSON.stringify(lottoData));
             displayLottoData();
             alert('모든 회차 데이터를 가져왔습니다!');
         }
 
-        // 최신 회차 업데이트 (중복 방지 및 동적 최신 회차 확인)
+        // 최신 회차 업데이트
         async function updateLatestLotto() {
             const latestStored = lottoData.length > 0 ? Math.max(...lottoData.map(d => d.drwNo)) : 0;
             let latestDrwNo = latestStored + 1;
@@ -183,7 +237,7 @@
 
             if (newData && !lottoData.some(d => d.drwNo === newData.drwNo)) {
                 lottoData.push(newData);
-                lottoData.sort((a, b) => a.drwNo - b.drwNo); // 정렬 유지
+                lottoData.sort((a, b) => a.drwNo - b.drwNo);
                 localStorage.setItem('lottoData', JSON.stringify(lottoData));
                 displayLottoData();
                 alert(`${latestDrwNo}회차가 업데이트되었습니다!`);
@@ -192,7 +246,7 @@
             }
         }
 
-        // 페이지 로드 시 저장된 데이터 표시
+        // 페이지 로드 시 데이터 표시
         window.onload = displayLottoData;
     </script>
 </body>
